Fix issue with text hidden behind footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
-
+/* Asterisk wildcard selector to override default styles added by the browser */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 /* General Styles */
 body {
@@ -81,7 +86,8 @@ p {
     text-align: center;
     font-size: 2em;
     color: white;
-    padding-top: 1.5em;
+    padding-top: 1em;
+    padding-bottom: 5em;
 }
 ol {
     display: inline-block;
@@ -174,12 +180,11 @@ ol {
 /* Footer */
 footer {
     background-color: #f64c72;
-    height: 100px;
-    padding: 10px 10px 0px 10px;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 100px;
-}
+    
+    }
 
 #social-networks {
     text-align: center;
